docs/v8.4/packages_api/data/navmodelitem.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "NavModelItem"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## NavModelItem interface

<b>Signature</b>

```typescript
export interface NavModelItem 
```
<b>Import</b>

```typescript
import { NavModelItem } from '@grafana/data';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  [active](#active-property) | <code>boolean</code> |  |
|  [breadcrumbs](#breadcrumbs-property) | <code>NavModelBreadcrumb[]</code> |  |
|  [children](#children-property) | <code>NavModelItem[]</code> |  |
|  [divider](#divider-property) | <code>boolean</code> |  |
|  [hideFromMenu](#hidefrommenu-property) | <code>boolean</code> |  |
|  [hideFromTabs](#hidefromtabs-property) | <code>boolean</code> |  |
|  [highlightId](#highlightid-property) | <code>string</code> |  |
|  [highlightText](#highlighttext-property) | <code>string</code> |  |
|  [icon](#icon-property) | <code>string</code> |  |
|  [id](#id-property) | <code>string</code> |  |
|  [img](#img-property) | <code>string</code> |  |
|  [menuItemType](#menuitemtype-property) | <code>NavMenuItemType</code> |  |
|  [onClick](#onclick-property) | <code>() =&gt; void</code> |  |
|  [parentItem](#parentitem-property) | <code>NavModelItem</code> |  |
|  [section](#section-property) | <code>NavSection</code> |  |
|  [showOrgSwitcher](#showorgswitcher-property) | <code>boolean</code> |  |
|  [subTitle](#subtitle-property) | <code>string</code> |  |
|  [tabSuffix](#tabsuffix-property) | <code>ComponentType&lt;{</code><br/><code>        className?: string;</code><br/><code>    }&gt;</code> |  |
|  [target](#target-property) | <code>string</code> |  |
|  [text](#text-property) | <code>string</code> |  |
|  [url](#url-property) | <code>string</code> |  |

### active property

<b>Signature</b>

```typescript
active?: boolean;
```

### breadcrumbs property

<b>Signature</b>

```typescript
breadcrumbs?: NavModelBreadcrumb[];
```

### children property

<b>Signature</b>

```typescript
children?: NavModelItem[];
```

### divider property

<b>Signature</b>

```typescript
divider?: boolean;
```

### hideFromMenu property

<b>Signature</b>

```typescript
hideFromMenu?: boolean;
```

### hideFromTabs property

<b>Signature</b>

```typescript
hideFromTabs?: boolean;
```

### highlightId property

<b>Signature</b>

```typescript
highlightId?: string;
```

### highlightText property

<b>Signature</b>

```typescript
highlightText?: string;
```

### icon property

<b>Signature</b>

```typescript
icon?: string;
```

### id property

<b>Signature</b>

```typescript
id?: string;
```

### img property

<b>Signature</b>

```typescript
img?: string;
```

### menuItemType property

<b>Signature</b>

```typescript
menuItemType?: NavMenuItemType;
```

### onClick property

<b>Signature</b>

```typescript
onClick?: () => void;
```

### parentItem property

<b>Signature</b>

```typescript
parentItem?: NavModelItem;
```

### section property

<b>Signature</b>

```typescript
section?: NavSection;
```

### showOrgSwitcher property

<b>Signature</b>

```typescript
showOrgSwitcher?: boolean;
```

### subTitle property

<b>Signature</b>

```typescript
subTitle?: string;
```

### tabSuffix property

<b>Signature</b>

```typescript
tabSuffix?: ComponentType<{
        className?: string;
    }>;
```

### target property

<b>Signature</b>

```typescript
target?: string;
```

### text property

<b>Signature</b>

```typescript
text: string;
```

### url property

<b>Signature</b>

```typescript
url?: string;
```
